mlir/frontends/isq/generate/ISQParser.cpp

// Generated from ISQParser.g4 by ANTLR 4.7.2


#include "ISQParserListener.h"
#include "ISQParserVisitor.h"

#include "ISQParser.h"


using namespace antlrcpp;
using namespace antlr4;

ISQParser::ISQParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

ISQParser::~ISQParser() {
  delete _interpreter;
}

std::string ISQParser::getGrammarFileName() const {
  return "ISQParser.g4";
}

const std::vector<std::string>& ISQParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& ISQParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgramContext ------------------------------------------------------------------

ISQParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ISQParser::ProgramBodyContext* ISQParser::ProgramContext::programBody() {
  return getRuleContext<ISQParser::ProgramBodyContext>(0);
}

std::vector<ISQParser::GateDefclauseContext *> ISQParser::ProgramContext::gateDefclause() {
  return getRuleContexts<ISQParser::GateDefclauseContext>();
}

ISQParser::GateDefclauseContext* ISQParser::ProgramContext::gateDefclause(size_t i) {
  return getRuleContext<ISQParser::GateDefclauseContext>(i);
}

std::vector<ISQParser::DefclauseContext *> ISQParser::ProgramContext::defclause() {
  return getRuleContexts<ISQParser::DefclauseContext>();
}

ISQParser::DefclauseContext* ISQParser::ProgramContext::defclause(size_t i) {
  return getRuleContext<ISQParser::DefclauseContext>(i);
}


size_t ISQParser::ProgramContext::getRuleIndex() const {
  return ISQParser::RuleProgram;
}

void ISQParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ISQParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void ISQParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ISQParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


antlrcpp::Any ISQParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ISQParserVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

ISQParser::ProgramContext* ISQParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, ISQParser::RuleProgram);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(75);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == ISQParser::Defgate) {
      setState(72);
      gateDefclause();
      setState(77);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(79); 
    _errHandler->sync(this);
    alt = 1;
    do {
      switch (alt) {
        case 1: {
              setState(78);
              defclause();
              break;
            }

      default:
        throw NoViableAltException(this);
      }
      setState(81); 
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx);
    } while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER);
    setState(83);
    programBody();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- GateDefclauseContext ------------------------------------------------------------------

ISQParser::GateDefclauseContext::GateDefclauseContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ISQParser::GateDefclauseContext::Defgate() {
  return getToken(ISQParser::Defgate, 0);
}

tree::TerminalNode* ISQParser::GateDefclauseContext::Identifier() {
  return getToken(ISQParser::Identifier, 0);
}

tree::TerminalNode* ISQParser::GateDefclauseContext::Assign() {
  return getToken(ISQParser::Assign, 0);
}

tree::TerminalNode* ISQParser::GateDefclauseContext::LeftBracket() {
  return getToken(ISQParser::LeftBracket, 0);
}

ISQParser::MatrixContentsContext* ISQParser::GateDefclauseContext::matrixContents() {
  return getRuleContext<ISQParser::MatrixContentsContext>(0);
}

tree::TerminalNode* ISQParser::GateDefclauseContext::RightBracket() {
  return getToken(ISQParser::RightBracket, 0);
}

tree::TerminalNode* ISQParser::GateDefclauseContext::Semi() {
  return getToken(ISQParser::Semi, 0);
}


size_t ISQParser::GateDefclauseContext::getRuleIndex() const {
  return ISQParser::RuleGateDefclause;
}

void ISQParser::GateDefclauseContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ISQParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterGateDefclause(this);
}

void ISQParser::GateDefclauseContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ISQParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitGateDefclause(this);
}


antlrcpp::Any ISQParser::GateDefclauseContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ISQParserVisitor*>(visitor))
    return parserVisitor->visitGateDefclause(this);
  else
    return visitor->visitChildren(this);
}

ISQParser::GateDefclauseContext* ISQParser::gateDefclause() {
  GateDefclauseContext *_localctx = _tracker.createInstance<GateDefclauseContext>(_ctx, getState());
  enterRule(_localctx, 2, ISQParser::RuleGateDefclause);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(85);
    match(ISQParser::Defgate);
    setState(86);
    match(ISQParser::Identifier);
    setState(87);
    match(ISQParser::Assign);
    setState(88);
    match(ISQParser::LeftBracket);
    setState(89);
    matrixContents();
    setState(90);
    match(ISQParser::RightBracket);
    setState(91);
    match(ISQParser::Semi);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MatrixContentsContext ------------------------------------------------------------------

ISQParser::MatrixContentsContext::MatrixContentsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t ISQParser::MatrixContentsContext::getRuleIndex() const {
  return ISQParser::RuleMatrixContents;
}

void ISQParser::MatrixContentsContext::copyFrom(MatrixContentsContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- MatrixdefContext ------------------------------------------------------------------

ISQParser::CNumberContext* ISQParser::MatrixdefContext::cNumber() {
  return getRuleContext<ISQParser::CNumberContext>(0);
}

ISQParser::MatrixContentsContext* ISQParser::MatrixdefContext::matrixContents() {
  return getRuleContext<ISQParser::MatrixContentsContext>(0);
}

tree::TerminalNode* ISQParser::MatrixdefContext::Comma() {
  return getToken(ISQParser::Comma, 0);
}

tree::TerminalNode* ISQParser::MatrixdefContext::Semi() {
  return getToken(ISQParser::Semi, 0);
}

ISQParser::MatrixdefContext::MatrixdefContext(MatrixContentsContext *ctx) { copyFrom(ctx); }

void ISQParser::MatrixdefContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ISQParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMatrixdef(this);
}
void ISQParser::MatrixdefContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ISQParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMatrixdef(this);
}

antlrcpp::Any ISQParser::MatrixdefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ISQParserVisitor*>(visitor))
    return parserVisitor->visitMatrixdef(this);
  else
    return visitor->visitChildren(this);
}
//----------------- MatrixvaldefContext ------------------------------------------------------------------

ISQParser::CNumberContext* ISQParser::MatrixvaldefContext::cNumber() {
  return getRuleContext<ISQParser::CNumberContext>(0);
}

ISQParser::MatrixvaldefContext::MatrixvaldefContext(MatrixContentsContext *ctx) { copyFrom(ctx); }

void ISQParser::MatrixvaldefContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ISQParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMatrixvaldef(this);
}
void ISQParser::MatrixvaldefContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ISQParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMatrixvaldef(this);
}

antlrcpp::Any ISQParser::MatrixvaldefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ISQParserVisitor*>(visitor))
    return parserVisitor->visitMatrixvaldef(this);
  else
    return visitor->visitChildren(this);
}
ISQParser::MatrixContentsContext* ISQParser::matrixContents() {
  MatrixContentsContext *_localctx = _tracker.createInstance<MatrixContentsContext>(_ctx, getState());
  enterRule(_localctx, 4, ISQParser::RuleMatrixContents);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(98);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      _localctx = dynamic_cast<MatrixContentsContext *>(_tracker.createInstance<ISQParser::MatrixvaldefContext>(_localctx));
      enterOuterAlt(_localctx, 1);
      setState(93);
      cNumber();
      break;
    }

    case 2: {
      _localctx = dynamic_cast<MatrixContentsContext *>(_tracker.createInstance<ISQParser::MatrixdefContext>(_localctx));
      enterOuterAlt(_localctx, 2);
      setState(94);
      cNumber();
      setState(95);
      _la = _input->LA(1);
      if (!(_la == ISQParser::Comma

      || _la == ISQParser::Semi)) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      setState(96);
      matrixContents();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CNumberContext ------------------------------------------------------------------

ISQParser::CNumberContext::CNumberContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ISQParser::NumberExprContext* ISQParser::CNumberContext::numberExpr() {
  return getRuleContext<ISQParser::NumberExprContext>(0);
}

tree::TerminalNode* ISQParser::CNumberContext::Minus() {
  return getToken(ISQParser::Minus, 0);
}


size_t ISQParser::CNumberContext::getRuleIndex() const {
  return ISQParser::RuleCNumber;
}

void ISQParser::CNumberContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ISQParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCNumber(this);
}

void ISQParser::CNumberContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ISQParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCNumber(this);
}


antlrcpp::Any ISQParser::CNumberContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ISQParserVisitor*>(visitor))
    return parserVisitor->visitCNumber(this);
  else
    return visitor->visitChildren(this);
}

ISQParser::CNumberContext* ISQParser::cNumber() {
  CNumberContext *_localctx = _tracker.createInstance<CNumberContext>(_ctx, getState());
  enterRule(_localctx, 6, ISQParser::RuleCNumber);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(103);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case ISQParser::Number: {
        enterOuterAlt(_localctx, 1);
        setState(100);
        numberExpr();
        break;
      }

      case ISQParser::Minus: {
        enterOuterAlt(_localctx, 2);
        setState(101);
        match(ISQParser::Minus);
        setState(102);
        numberExpr();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- NumberExprContext ------------------------------------------------------------------

ISQParser::NumberExprContext::NumberExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> ISQParser::NumberExprContext::Number() {
  return getTokens(ISQParser::Number);
}

tree::TerminalNode* ISQParser::NumberExprContext::Number(size_t i) {
  return getToken(ISQParser::Number, i);
}

tree::TerminalNode* ISQParser::NumberExprContext::Plus() {
  return getToken(ISQParser::Plus, 0);
}

tree::TerminalNode* ISQParser::NumberExprContext::Minus() {
  return getToken(ISQParser::Minus, 0);
}


size_t ISQParser::NumberExprContext::getRuleIndex() const {
  return ISQParser::RuleNumberExpr;
}

void ISQParser::NumberExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ISQParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterNumberExpr(this);
}

void ISQParser::NumberExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ISQParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitNumberExpr(this);
}


antlrcpp::Any ISQParser::NumberExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ISQParserVisitor*>(visitor))
    return parserVisitor->visitNumberExpr(this);
  else
    return visitor->visitChildren(this);
}

ISQParser::NumberExprContext* ISQParser::numberExpr() {
  NumberExprContext *_localctx = _tracker.createInstance<NumberExprContext>(_ctx, getState());
  enterRule(_localctx, 8, ISQParser::RuleNumberExpr);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(112);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(105);
      match(ISQParser::Number);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(106);
      match(ISQParser::Number);
      setState(107);
      match(ISQParser::Plus);
      setState(108);
      match(ISQParser::Number);
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(109);
      match(ISQParser::Number);
      setState(110);
      match(ISQParser::Minus);
      setState(111);
      match(ISQParser::Number);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarTypeContext ------------------------------------------------------------------

ISQParser::VarTypeContext::VarTypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ISQParser::VarTypeContext::Qbit() {
  return getToken(ISQParser::Qbit, 0);
}

tree::TerminalNode* ISQParser::VarTypeContext::Int() {
  return getToken(ISQParser::Int, 0);
}


size_t ISQParser::VarTypeContext::getRuleIndex() const {
  return ISQParser::RuleVarType;
}

void ISQParser::VarTypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ISQParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVarType(this);
}

void ISQParser::VarTypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ISQParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVarType(this);
}


antlrcpp::Any ISQParser::VarTypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ISQParserVisitor*>(visitor))
    return parserVisitor->visitVarType(this);
  else
    return visitor->visitChildren(this);
}

ISQParser::VarTypeContext* ISQParser::varType() {
  VarTypeContext *_localctx = _tracker.createInstance<VarTypeContext>(_ctx, getState());
  enterRule(_localctx, 10, ISQParser::RuleVarType);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(114);
    _la = _input->LA(1);
    if (!(_la == ISQParser::Int

    || _la == ISQParser::Qbit)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DefclauseContext ------------------------------------------------------------------

ISQParser::DefclauseContext::DefclauseContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ISQParser::VarTypeContext* ISQParser::DefclauseContext::varType() {
  return getRuleContext<ISQParser::VarTypeContext>(0);
}

ISQParser::IdlistContext* ISQParser::DefclauseContext::idlist() {
  return getRuleContext<ISQParser::IdlistContext>(0);
}

tree::TerminalNode* ISQParser::DefclauseContext::Semi() {
  return getToken(ISQParser::Semi, 0);
}


size_t ISQParser::DefclauseContext::getRuleIndex() const {
  return ISQParser::RuleDefclause;
}

void ISQParser::DefclauseContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ISQParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDefclause(this);
}

void ISQParser::DefclauseContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ISQParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDefclause(this);
}


antlrcpp::Any ISQParser::DefclauseContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ISQParserVisitor*>(visitor))
    return parserVisitor->visitDefclause(this);
  else
    return visitor->visitChildren(this);
}

ISQParser::DefclauseContext* ISQParser::defclause() {
  DefclauseContext *_localctx = _tracker.createInstance<DefclauseContext>(_ctx, getState());
  enterRule(_localctx, 12, ISQParser::RuleDefclause);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(116);
    varType();
    setState(117);
    idlist(0);
    setState(118);
    match(ISQParser::Semi);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IdlistContext ------------------------------------------------------------------

ISQParser::IdlistContext::IdlistContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t ISQParser::IdlistContext::getRuleIndex() const {
  return ISQParser::RuleIdlist;
}

void ISQParser::IdlistContext::copyFrom(IdlistContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- IdlistdefContext ------------------------------------------------------------------

std::vector<ISQParser::IdlistContext *> ISQParser::IdlistdefContext::idlist() {
  return getRuleContexts<ISQParser::IdlistContext>();
}

ISQParser::IdlistContext* ISQParser::IdlistdefContext::idlist(size_t i) {
  return getRuleContext<ISQParser::IdlistContext>(i);
}

tree::TerminalNode* ISQParser::IdlistdefContext::Comma() {
  return getToken(ISQParser::Comma, 0);
}

ISQParser::IdlistdefContext::IdlistdefContext(IdlistContext *ctx) { copyFrom(ctx); }

void ISQParser::IdlistdefContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ISQParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIdlistdef(this);
}
void ISQParser::IdlistdefContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ISQParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIdlistdef(this);
}

antlrcpp::Any ISQParser::IdlistdefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ISQParserVisitor*>(visitor))
    return parserVisitor->visitIdlistdef(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ArraydefContext ------------------------------------------------------------------

tree::TerminalNode* ISQParser::ArraydefContext::Identifier() {
  return getToken(ISQParser::Identifier, 0);
}

tree::TerminalNode* ISQParser::ArraydefContext::LeftBracket() {
  return getToken(ISQParser::LeftBracket, 0);
}

tree::TerminalNode* ISQParser::ArraydefContext::Number() {
  return getToken(ISQParser::Number, 0);
}

tree::TerminalNode* ISQParser::ArraydefContext::RightBracket() {
  return getToken(ISQParser::RightBracket, 0);
}

ISQParser::ArraydefContext::ArraydefContext(IdlistContext *ctx) { copyFrom(ctx); }

void ISQParser::ArraydefContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ISQParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterArraydef(this);
}
void ISQParser::ArraydefContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ISQParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitArraydef(this);
}

antlrcpp::Any ISQParser::ArraydefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ISQParserVisitor*>(visitor))
    return parserVisitor->visitArraydef(this);
  else
    return visitor->visitChildren(this);
}
//----------------- SingleiddefContext ------------------------------------------------------------------

tree::TerminalNode* ISQParser::SingleiddefContext::Identifier() {
  return getToken(ISQParser::Identifier, 0);
}

ISQParser::SingleiddefContext::SingleiddefContext(IdlistContext *ctx) { copyFrom(ctx); }

void ISQParser::SingleiddefContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ISQParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSingleiddef(this);
}
void ISQParser::SingleiddefContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ISQParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSingleiddef(this);
}

antlrcpp::Any ISQParser::SingleiddefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ISQParserVisitor*>(visitor))
    return parserVisitor->visitSingleiddef(this);
  else
    return visitor->visitChildren(this);
}

ISQParser::IdlistContext* ISQParser::idlist() {
   return idlist(0);
}

ISQParser::IdlistContext* ISQParser::idlist(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  ISQParser::IdlistContext *_localctx = _tracker.createInstance<IdlistContext>(_ctx, parentState);
  ISQParser::IdlistContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 14;
  enterRecursionRule(_localctx, 14, ISQParser::RuleIdlist, precedence);

    

  auto onExit = finally([=] {
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(126);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<SingleiddefContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;

      setState(121);
      match(ISQParser::Identifier);
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<ArraydefContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(122);
      match(ISQParser::Identifier);
      setState(123);
      match(ISQParser::LeftBracket);
      setState(124);
      match(ISQParser::Number);
      setState(125);
      match(ISQParser::RightBracket);
      break;
    }

    }
    _ctx->stop = _input->LT(-1);
    setState(133);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        auto newContext = _tracker.createInstance<IdlistdefContext>(_tracker.createInstance<IdlistContext>(parentContext, parentState));
        _localctx = newContext;
        pushNewRecursionContext(newContext, startState, RuleIdlist);
        setState(128);

        if (!(precpred(_ctx, 1))) throw FailedPredicateException(this, "precpred(_ctx, 1)");
        setState(129);
        match(ISQParser::Comma);
        setState(130);
        idlist(2); 
      }
      setState(135);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- ProgramBodyContext ------------------------------------------------------------------

ISQParser::ProgramBodyContext::ProgramBodyContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ISQParser::ProcedureMainContext* ISQParser::ProgramBodyContext::procedureMain() {
  return getRuleContext<ISQParser::ProcedureMainContext>(0);
}

std::vector<ISQParser::ProcedureBlockContext *> ISQParser::ProgramBodyContext::procedureBlock() {
  return getRuleContexts<ISQParser::ProcedureBlockContext>();
}

ISQParser::ProcedureBlockContext* ISQParser::ProgramBodyContext::procedureBlock(size_t i) {
  return getRuleContext<ISQParser::ProcedureBlockContext>(i);
}


size_t ISQParser::ProgramBodyContext::getRuleIndex() const {
  return ISQParser::RuleProgramBody;
}

void ISQParser::ProgramBodyContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ISQParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgramBody(this);
}

void ISQParser::ProgramBodyContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ISQParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgramBody(this);
}


antlrcpp::Any ISQParser::ProgramBodyContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ISQParserVisitor*>(visitor))
    return parserVisitor->visitProgramBody(this);
  else
    return visitor->visitChildren(this);
}

ISQParser::ProgramBodyContext* ISQParser::programBody() {
  ProgramBodyContext *_localctx = _tracker.createInstance<ProgramBodyContext>(_ctx, getState());
  enterRule(_localctx, 16, ISQParser::RuleProgramBody);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(139);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(136);
        procedureBlock(); 
      }
      setState(141);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx);
    }
    setState(142);
    procedureMain();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ProcedureBlockContext ------------------------------------------------------------------

ISQParser::ProcedureBlockContext::ProcedureBlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ISQParser::ProcedureBlockContext::Identifier() {
  return getToken(ISQParser::Identifier, 0);
}

tree::TerminalNode* ISQParser::ProcedureBlockContext::LeftParen() {
  return getToken(ISQParser::LeftParen, 0);
}
